--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -431,6 +431,7 @@
   "gui.nukacraft.hideMarkers": "Скрыть Все Маркеры",
   "gui.nukacraft.showMarkers": "Показать Все Маркеры",
   "gui.nukacraft.followPlayer": "Показать Игрока",
+  "gui.nukacraft.scalebar": "Масштаб",
 
 
   "item.nukacraft.holotape_white": "Цветовая Голозапись",
