--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -12,6 +12,12 @@
   "item.nukacraft.alumicond": "Aluminium Radiator",
   "item.nukacraft.round10mm": "10mm Round",
   "item.nukacraft.round45": ".45 Round",
+  "item.nukacraft.powdergun": "Black Powder Rifle",
+  "item.nukacraft.steel_ball": ".50 Balls",
+  "item.nukacraft.weapon_parts": "Weapon Parts",
+  "item.nukacraft.unc_weapon_parts": "§aRare Weapon Parts★",
+  "item.nukacraft.leg_weapon_parts": "§cSpecial Weapon Parts★★",
+  "item.nukacraft.myth_weapon_parts": "§6Illegal Weapon Parts★★★",
   "item.nukacraft.baseballgrenade": "Baseball Grenade",
   "item.nukacraft.army_silencer": "Army Silencer",
   "item.nukacraft.round38": ".38 Round",
