--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -11,6 +11,12 @@
   "item.nukacraft.antisept": "Антисептик",
   "block.nukacraft.redlight": "Красная Лампа",
   "item.nukacraft.cleaver": "Секач",
+  "item.nukacraft.powdergun": "Пороховое Ружьё",
+  "item.nukacraft.steel_ball": "Шарики .50кал",
+  "item.nukacraft.weapon_parts": "Оружейные Части",
+  "item.nukacraft.unc_weapon_parts": "§aРедкие Оружейные Части★",
+  "item.nukacraft.leg_weapon_parts": "§cОсобые Оружейные Части★★",
+  "item.nukacraft.myth_weapon_parts": "§6Запрещенные Оружейные Части★★★",
   "item.nukacraft.baseballgrenade": "Бейбольная Граната",
   "item.nukacraft.traphelmet": "Шлем Траппера",
   "item.nukacraft.trapchest": "Нагрудник Траппера",
