--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -19,6 +19,14 @@
   "item.nukacraft.leg_weapon_parts": "§cSpecial Weapon Parts★★",
   "item.nukacraft.myth_weapon_parts": "§6Illegal Weapon Parts★★★",
   "item.nukacraft.baseballgrenade": "Baseball Grenade",
+  "item.nukacraft.dcleather": "Deathclaw Leather",
+  "item.nukacraft.raw_dcmeat": "Raw Deathclaw Meat",
+  "item.nukacraft.raw_radroachmeat": "Raw Radroach Meat",
+  "item.nukacraft.c_radroachmeat": "Cooked Radroach Meat",
+  "item.nukacraft.c_dcmeat": "Cooked Deathclaw Meat",
+  "item.nukacraft.raw_brahminmeat": "Raw Brahmin Meat",
+  "item.nukacraft.deathclaw": "Deathclaw Hand",
+  "item.nukacraft.c_brahminmeat": "Cooked Brahmin Meat",
   "item.nukacraft.army_silencer": "Army Silencer",
   "item.nukacraft.round38": ".38 Round",
   "item.nukacraft.round5mm": "5mm Round",
