--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -18,8 +18,16 @@
   "item.nukacraft.leg_weapon_parts": "§cОсобые Оружейные Части★★",
   "item.nukacraft.myth_weapon_parts": "§6Запрещенные Оружейные Части★★★",
   "item.nukacraft.baseballgrenade": "Бейбольная Граната",
+  "item.nukacraft.dcleather": "Кожа Когтя Смерти",
+  "item.nukacraft.raw_dcmeat": "Сырое Мясо Когтя Смерти",
+  "item.nukacraft.c_dcmeat": "Стейк из Когтя Смерти",
+  "item.nukacraft.raw_radroachmeat": "Сырое Мясо Радтаракана",
+  "item.nukacraft.c_radroachmeat": "Стейк из Радтаракана",
   "item.nukacraft.traphelmet": "Шлем Траппера",
   "item.nukacraft.trapchest": "Нагрудник Траппера",
+  "item.nukacraft.raw_brahminmeat": "Сырое Мясо Брамина",
+  "item.nukacraft.c_brahminmeat": "Стейк из Брамина",
+  "item.nukacraft.deathclaw": "Лапа Когтя Смерти",
   "item.nukacraft.trapleggins": "Поножи Траппера",
   "item.nukacraft.trapboots": "Ботинки Траппера",
   "item.nukacraft.metalhelmet": "Металлический Шлем",
