--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -383,7 +383,7 @@
   "item.nukacraft.bombberry": "Bomb Berry",
   "item.nukacraft.muttfruit": "Mutfruit",
   "item.nukacraft.fusionfruit": "Fusion Fruit",
-  "item.nukacraft.sittbean": "Sitt Bean",
+  "item.nukacraft.sittbean": "Silt Bean",
   "item.nukacraft.neutronpod": "Neutron Rod",
   "item.nukacraft.wildtato": "Tato",
   "item.nukacraft.cranberry": "Cranberry",
