--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -150,6 +150,7 @@
   "block.nukacraft.hatter": "Hatter Mushroom",
   "block.nukacraft.crackedwhitebricks": "Cracked White Bricks",
   "block.nukacraft.rusty_pipe": "Rust Pipe",
+  "block.nukacraft.wasteland_terminal": "Wasteland Terminal",
   "block.nukacraft.megamorph_hatter": "Megamorph Hatter Mushroom",
   "block.nukacraft.radioterminal": "Communications Terminal",
   "block.nukacraft.shelter_bars": "Vault-Tec Bars",
