--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -12,6 +12,7 @@
   "block.nukacraft.redlight": "Красная Лампа",
   "item.nukacraft.cleaver": "Секач",
   "item.nukacraft.powdergun": "Пороховое Ружьё",
+  "block.nukacraft.wasteland_terminal": "Терминал Пустошей",
   "item.nukacraft.steel_ball": "Шарики .50кал",
   "item.nukacraft.weapon_parts": "Оружейные Части",
   "item.nukacraft.unc_weapon_parts": "§aРедкие Оружейные Части★",
