--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -571,6 +571,11 @@
   "gui.nukacraft.workbench.tab.attachments": "Attachments",
   "gui.nukacraft.workbench.tab.ammo": "Ammo",
   "gui.nukacraft.workbench.tab.misc": "Miscellaneous",
+  "gui.nukacraft.workbench.tab.pistol": "Pistols",
+  "gui.nukacraft.workbench.tab.heavy": "Heavy",
+  "gui.nukacraft.workbench.tab.shotgun": "Shotguns",
+  "gui.nukacraft.workbench.tab.rifle": "Rifles",
+  "gui.nukacraft.workbench.tab.melee": "Melees",
   "container.nukacraft.workbench": "Assembly Workbench",
   "container.nukacraft.attachments": "Modify Attachments",
   "container.nukacraft.attachments.window_help": "Click to move and rotate",
