--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -570,6 +570,11 @@
   "gui.nukacraft.workbench.tab.attachments": "Обвесы",
   "gui.nukacraft.workbench.tab.ammo": "Боеприпасы",
   "gui.nukacraft.workbench.tab.misc": "Разное",
+  "gui.nukacraft.workbench.tab.pistol": "Пистолеты",
+  "gui.nukacraft.workbench.tab.heavy": "Тяжёлое",
+  "gui.nukacraft.workbench.tab.shotgun": "Дробовики",
+  "gui.nukacraft.workbench.tab.rifle": "Винтовки",
+  "gui.nukacraft.workbench.tab.melee": "Ближнее",
   "container.nukacraft.workbench": "Сборочный Верстак",
   "container.nukacraft.attachments": "Изменить обвесы",
   "container.nukacraft.attachments.window_help": "Кликните, чтобы перемещать и вертеть",
