Gear door + landmine

--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -15,6 +15,11 @@
   "item.nukacraft.powdergun": "Black Powder Rifle",
   "item.nukacraft.steel_ball": ".50 Balls",
   "item.nukacraft.weapon_parts": "Weapon Parts",
+  "block.nukacraft.geardoor": "Vault-Tec Door",
+  "block.nukacraft.filler_barrier": "Filler Block",
+  "block.nukacraft.cooler": "Cooler Block",
+  "block.nukacraft.fridge": "Fridge Block",
+  "block.nukacraft.half_barrier": "Filler Slab",
   "item.nukacraft.unc_weapon_parts": "§aRare Weapon Parts★",
   "item.nukacraft.leg_weapon_parts": "§cSpecial Weapon Parts★★",
   "item.nukacraft.myth_weapon_parts": "§6Illegal Weapon Parts★★★",
@@ -571,11 +576,6 @@
   "gui.nukacraft.workbench.tab.attachments": "Attachments",
   "gui.nukacraft.workbench.tab.ammo": "Ammo",
   "gui.nukacraft.workbench.tab.misc": "Miscellaneous",
-  "gui.nukacraft.workbench.tab.pistol": "Pistols",
-  "gui.nukacraft.workbench.tab.heavy": "Heavy",
-  "gui.nukacraft.workbench.tab.shotgun": "Shotguns",
-  "gui.nukacraft.workbench.tab.rifle": "Rifles",
-  "gui.nukacraft.workbench.tab.melee": "Melees",
   "container.nukacraft.workbench": "Assembly Workbench",
   "container.nukacraft.attachments": "Modify Attachments",
   "container.nukacraft.attachments.window_help": "Click to move and rotate",
