--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -17,6 +17,7 @@
   "item.nukacraft.weapon_parts": "Weapon Parts",
   "block.nukacraft.geardoor": "Vault-Tec Door",
   "block.nukacraft.filler_barrier": "Filler Block",
+  "block.nukacraft.fragmine": "Fragmentation Mine",
   "block.nukacraft.cooler": "Cooler Block",
   "block.nukacraft.fridge": "Fridge Block",
   "block.nukacraft.half_barrier": "Filler Slab",
@@ -576,6 +577,11 @@
   "gui.nukacraft.workbench.tab.attachments": "Attachments",
   "gui.nukacraft.workbench.tab.ammo": "Ammo",
   "gui.nukacraft.workbench.tab.misc": "Miscellaneous",
+  "gui.nukacraft.workbench.tab.pistol": "Pistols",
+  "gui.nukacraft.workbench.tab.heavy": "Heavy",
+  "gui.nukacraft.workbench.tab.shotgun": "Shotguns",
+  "gui.nukacraft.workbench.tab.rifle": "Rifles",
+  "gui.nukacraft.workbench.tab.melee": "Melees",
   "container.nukacraft.workbench": "Assembly Workbench",
   "container.nukacraft.attachments": "Modify Attachments",
   "container.nukacraft.attachments.window_help": "Click to move and rotate",
