--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -146,6 +146,9 @@
   "block.nukacraft.smooth_brick": "Smooth Bricks",
   "block.nukacraft.steel_bars": "Steel Bars",
   "block.nukacraft.vtarmor": "Vault-Tec Betonite",
+  "block.nukacraft.shelter_lamp": "Vault-Tec Lamp",
+  "block.nukacraft.vent_tube": "Vent Tube",
+  "block.nukacraft.ind_button": "Switch Button",
   "block.nukacraft.comblock": "Computing Block",
   "block.nukacraft.woodcrate": "Wood Crate",
   "container.nukacraft.storage": "Storage",
