--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -11,11 +11,18 @@
   "item.nukacraft.antisept": "Антисептик",
   "block.nukacraft.redlight": "Красная Лампа",
   "item.nukacraft.cleaver": "Секач",
+  "block.nukacraft.geardoor": "Дверь Vault-Tec",
+  "block.nukacraft.filler_barrier": "Блок Заполнитель",
+  "block.nukacraft.half_barrier": "Плита Заполнитель",
+  "block.nukacraft.shelter_lamp": "Лампа Волт-Тек",
+  "block.nukacraft.vent_tube": "Вентиляция",
   "item.nukacraft.powdergun": "Пороховое Ружьё",
   "block.nukacraft.cooler": "Морозильная Камера",
+  "block.nukacraft.fragmine": "Осколочная Мина",
   "block.nukacraft.fridge": "Холодильник",
   "block.nukacraft.wasteland_terminal": "Терминал Пустошей",
   "item.nukacraft.steel_ball": "Шарики .50кал",
+  "block.nukacraft.ind_button": "Переключатель",
   "item.nukacraft.weapon_parts": "Оружейные Части",
   "item.nukacraft.unc_weapon_parts": "§aРедкие Оружейные Части★",
   "item.nukacraft.leg_weapon_parts": "§cОсобые Оружейные Части★★",
