--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -4,9 +4,9 @@
   "item.nukacraft.adncan": "Advanced Circuit Board",
   "item.nukacraft.advmag": "Advanced Magnet",
   "itemGroup.nuka_material": "Nuka-Craft: Miscellaneous",
-  "itemGroup.nuka_equip": "Nuka-Craft: Weapons",
-  "itemGroup.nuka_armor": "Nuka-Craft: Armors",
-  "itemGroup.nuka_foods": "Nuka-Craft: Foods",
+  "itemGroup.nuka_equip": "Nuka-Craft: Weapon",
+  "itemGroup.nuka_armor": "Nuka-Craft: Armor",
+  "itemGroup.nuka_foods": "Nuka-Craft: Food",
   "item.nukacraft.aimproccesor": "Circuit Board",
   "item.nukacraft.antisept": "Antiseptic",
   "item.nukacraft.alumicond": "Aluminium Radiator",
@@ -57,7 +57,7 @@
   "item.nukacraft.army_circuit": "Military-grade Circuit",
   "item.nukacraft.electrite_divider": "Electrite Divider",
   "item.nukacraft.electrite_sheat": "Electrite Sheat",
-  "item.nukacraft.quartz_sheat": "Quartz Sheat",
+  "item.nukacraft.quartz_sheat": "Quartz Shell",
   "item.nukacraft.quartz_piece": "Quartz Piece",
   "item.nukacraft.quartz_plate": "Quartz Plate",
   "item.nukacraft.silicate": "Silicate Powder",
@@ -319,8 +319,8 @@
   "block.nukacraft.magtile": "Magenta Tiles",
   "block.nukacraft.glowfungus": "Glowing Fungus",
   "block.nukacraft.mutshootfungus": "Glowing Mutshoot Fungus",
-  "block.nukacraft.death_plant": "Death Plant",
-  "block.nukacraft.death_flower": "Death Flower",
+  "block.nukacraft.death_plant": "Dead Plant",
+  "block.nukacraft.death_flower": "Dead Flower",
   "block.nukacraft.prpltile": "Purple Tiles",
   "block.nukacraft.redtile": "Red Tiles",
   "block.nukacraft.brocflower": "Broc Flower",
