--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -78,6 +78,16 @@
   "item.nukacraft.whitebrick": "White Brick",
   "item.nukacraft.minigun": "§cMinigun★★",
   "block.nukacraft.quarts_ore": "Quartz Ore",
+  "block.nukacraft.dinnerchair": "Dinner Bench",
+  "block.nukacraft.writtingdesk1": "Writting Desk",
+  "block.nukacraft.writtingdesk2": "Writting Desk",
+  "block.nukacraft.writtingdesk3": "Writting Desk",
+  "block.nukacraft.vaultblastdoor": "Vault Gateway",
+  "block.nukacraft.vtlattice": "Lattice",
+  "block.nukacraft.mosswhitebricks_stairs": "Mossy White Brick Stairs",
+  "block.nukacraft.crackedwhitebricks_stairs": "Cracked White Brick Stairs",
+  "block.nukacraft.shelterfloor": "Shelter Floor",
+  "block.nukacraft.blacksteel_stairs": "Black Steel Stairs",
   "block.nukacraft.deepquarts_ore": "Deepslate Quartz Ore",
   "item.nukacraft.gilded_lead": "Gilded Lead Plate",
   "item.nukacraft.scrap": "Scrap Metal",
