--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -10,6 +10,16 @@
   "item.nukacraft.aimproccesor": "Печатная Плата",
   "item.nukacraft.antisept": "Антисептик",
   "block.nukacraft.redlight": "Красная Лампа",
+  "block.nukacraft.dinnerchair": "Обеденная Скамья",
+  "block.nukacraft.writtingdesk1": "Письменный Стол",
+  "block.nukacraft.writtingdesk2": "Письменный Стол",
+  "block.nukacraft.writtingdesk3": "Письменный Стол",
+  "block.nukacraft.vaultblastdoor": "Шлюз Убежища",
+  "block.nukacraft.vtlattice": "Решётка",
+  "block.nukacraft.mosswhitebricks_stairs": "Замшелые Белые Кирпичные Ступеньки",
+  "block.nukacraft.crackedwhitebricks_stairs": "Потрескавшиеся Белые Кирпичные Ступеньки",
+  "block.nukacraft.shelterfloor": "Пол Убежища",
+  "block.nukacraft.blacksteel_stairs": "Ступеньки из Тёмной Стали",
   "item.nukacraft.cleaver": "Секач",
   "block.nukacraft.geardoor": "Дверь Vault-Tec",
   "block.nukacraft.filler_barrier": "Блок Заполнитель",
