--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -3,10 +3,10 @@
   "item.nukacraft.adhesive": "Клей",
   "item.nukacraft.adncan": "Продвинутая Печатная Плата",
   "item.nukacraft.advmag": "Продвинутый Mагнит",
-  "itemGroup.nuka_material": "Nuka-Craft: Материалы",
-  "itemGroup.nuka_foods": "Nuka-Craft: Пища и Напитки",
-  "itemGroup.nuka_equip": "Nuka-Craft: Оружие",
-  "itemGroup.nuka_armor": "Nuka-Craft: Броня",
+  "itemGroup.nuka_material": "Nuka Craft: Материалы",
+  "itemGroup.nuka_foods": "Nuka Craft: Пища и Напитки",
+  "itemGroup.nuka_equip": "Nuka Craft: Оружие",
+  "itemGroup.nuka_armor": "Nuka Craft: Броня",
   "item.nukacraft.aimproccesor": "Печатная Плата",
   "item.nukacraft.antisept": "Антисептик",
   "block.nukacraft.redlight": "Красная Лампа",
@@ -47,7 +47,7 @@
   "item.nukacraft.unc_weapon_parts": "§aРедкие Оружейные Части★",
   "item.nukacraft.leg_weapon_parts": "§cОсобые Оружейные Части★★",
   "item.nukacraft.myth_weapon_parts": "§6Запрещенные Оружейные Части★★★",
-  "item.nukacraft.baseballgrenade": "Бейбольная Граната",
+  "item.nukacraft.baseball_grenade": "Бейбольная Граната",
   "item.nukacraft.dcleather": "Кожа Когтя Смерти",
   "item.nukacraft.raw_dcmeat": "Сырое Мясо Когтя Смерти",
   "item.nukacraft.c_dcmeat": "Стейк из Когтя Смерти",
@@ -274,7 +274,7 @@
   "block.nukacraft.aluminium_ore": "Алюминиевая Руда",
   "block.nukacraft.copper_ore": "Медная Руда",
   "block.nukacraft.barnplanks": "Амбарныe Доски",
-  "itemGroup.nuka_blocks": "Nuka-Craft: Блоки",
+  "itemGroup.nuka_blocks": "Nuka Craft: Блоки",
   "block.nukacraft.lead_ore": "Свинцовая Руда",
   "block.nukacraft.alumi_block": "Алюминиевый Блок",
   "block.nukacraft.lead_block": "Свинцовый Блок",
