--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -3,10 +3,10 @@
   "item.nukacraft.adhesive": "Adhesive",
   "item.nukacraft.adncan": "Advanced Circuit Board",
   "item.nukacraft.advmag": "Advanced Magnet",
-  "itemGroup.nuka_material": "Nuka-Craft: Miscellaneous",
-  "itemGroup.nuka_equip": "Nuka-Craft: Weapon",
-  "itemGroup.nuka_armor": "Nuka-Craft: Armor",
-  "itemGroup.nuka_foods": "Nuka-Craft: Food",
+  "itemGroup.nuka_material": "Nuka Craft: Miscellaneous",
+  "itemGroup.nuka_equip": "Nuka Craft: Weapon",
+  "itemGroup.nuka_armor": "Nuka Craft: Armor",
+  "itemGroup.nuka_foods": "Nuka Craft: Food",
   "item.nukacraft.aimproccesor": "Circuit Board",
   "item.nukacraft.antisept": "Antiseptic",
   "item.nukacraft.alumicond": "Aluminium Radiator",
@@ -24,7 +24,7 @@
   "item.nukacraft.unc_weapon_parts": "§aRare Weapon Parts★",
   "item.nukacraft.leg_weapon_parts": "§cSpecial Weapon Parts★★",
   "item.nukacraft.myth_weapon_parts": "§6Illegal Weapon Parts★★★",
-  "item.nukacraft.baseballgrenade": "Baseball Grenade",
+  "item.nukacraft.baseball_grenade": "Baseball Grenade",
   "item.nukacraft.dcleather": "Deathclaw Leather",
   "item.nukacraft.raw_dcmeat": "Raw Deathclaw Meat",
   "item.nukacraft.raw_radroachmeat": "Raw Radroach Meat",
@@ -294,7 +294,7 @@
   "item.nukacraft.copper": "Copper Ingot",
   "block.nukacraft.aluminium_ore": "Aluminium Ore",
   "block.nukacraft.barnplanks": "Barn Planks",
-  "itemGroup.nuka_blocks": "Nuka-Craft: Building Blocks",
+  "itemGroup.nuka_blocks": "Nuka Craft: Building Blocks",
   "block.nukacraft.lead_ore": "Lead Ore",
   "block.nukacraft.copper_ore": "Copper Ore",
   "block.nukacraft.alumi_block": "Aluminium Block",
