--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -177,7 +177,6 @@
   "item.nukacraft.magazine_t1": "Магазин 1 Уровня",
   "item.nukacraft.magazine_t2": "§aМагазин 2 Уровня★",
   "item.nukacraft.magazine_t3": "§cМагазин 3 Уровня★★",
-  "attachment.nukacraft.magazine": "§8Устанавливается в слот 'Подствольник'",
   "item.nukacraft.coral_leaf": "Коралловые Листья",
   "item.nukacraft.spoiled_tato": "Тухлая Тошка",
   "item.nukacraft.irrad_beetroot": "Облучённая Свекла",
@@ -207,9 +206,7 @@
   "item.nukacraft.pipepistol": "Гладкоствол",
   "item.nukacraft.gold_cranberry": "Золотая Клюква",
   "item.nukacraft.nukamelon_piece": "Ломтик Мегатонн-Арбуза",
-  "block.nukacraft.glowfungus": "Светящийся гриб",
   "block.nukacraft.irrad_beetroots": "Семена Облучённой Свеклы",
-  "block.nukacraft.mutshootfungus": "Светящийся гриб мутострел",
   "item.nukacraft.ufcarrot": "Ультрафиолетовая Морковь",
   "item.nukacraft.raw_btitan": "Рудный Черный Титан",
   "item.nukacraft.raw_uran": "Рудный Уран",
@@ -448,12 +445,10 @@
   "block.nukacraft.storage1": "Картотека",
   "block.nukacraft.vtcrate1": "Ящик Волт-Тек",
   "block.nukacraft.vtcrate2": "Ящик Смотрителя",
-  "block.nukacraft.hatter": "Гриб Шляпник",
   "item.nukacraft.lether_helmet": "Кожанная Фуражка",
   "item.nukacraft.lether_body": "Кожанная Куртка",
   "item.nukacraft.lether_leggins": "Кожаные Штаны",
   "item.nukacraft.lether_boots": "Кожанные Ботинки",
-  "block.nukacraft.megamorph_hatter": "Мегаморфный Гриб Шляпник",
   "block.nukacraft.radioterminal": "Терминал Связи",
   "block.nukacraft.shelter_bars": "Решётка Волт-Тек",
   "item.nukacraft.fusionfruit": "Расплавленный Фрукт",
@@ -552,7 +547,6 @@
   "color.display.red": "§cКрасный",
   "color.display.orange": "§6Оранжевый",
   "color.display.gold": "§eЗолотой",
-  "color.display.violet": "§dФиолетовый",
 
   "archive.nukacraft.vaultboy.name": "▪ Дорогой Резидент Убежища!",
 
@@ -582,85 +576,27 @@
   "skin.default" : "§7§oЧистая",
   "skin.rust" : "§7§oРжавая",
 
-
-
   "block.nukacraft.workbench": "Сборочный Верстак",
-  "item.nukacraft.pistol": "Пистолет",
-  "item.nukacraft.shotgun": "Дробовик",
-  "item.nukacraft.sniper_rifle": "Снайперская винтовка",
-  "item.nukacraft.grenade_launcher": "Гранатомёт",
-  "item.nukacraft.bazooka": "Базука",
-  "item.nukacraft.mini_gun": "Миниган",
-  "item.nukacraft.rifle": "Винтовка",
-  "item.nukacraft.assault_rifle": "Штурмовая винтовка",
-  "item.nukacraft.machine_pistol": "Пистолет-пулемёт",
-  "item.nukacraft.heavy_rifle": "Тяжелая винтовка",
-  "item.nukacraft.basic_bullet": "Простой патрон",
-  "item.nukacraft.advanced_bullet": "Продвинутый патрон",
-  "item.nukacraft.shell": "Патрон дробовика",
+
+  "item.nukacraft.missile": "Ракета",
   "item.nukacraft.grenade": "Граната",
   "item.nukacraft.stun_grenade": "Оглушающая граната",
-  "item.nukacraft.missile": "Ракета",
-  "item.nukacraft.short_scope": "Короткий прицел",
-  "item.nukacraft.steelbowl": "Стальная Миска",
-  "item.nukacraft.medium_scope": "Средний прицел",
-  "item.nukacraft.long_scope": "Длинный прицел",
-  "item.nukacraft.silencer": "Глушитель",
-  "item.nukacraft.light_stock": "Лёгкая ложа",
-  "item.nukacraft.tactical_stock": "Тактическая ложа",
-  "item.nukacraft.weighted_stock": "Утяжеленная ложа",
-  "item.nukacraft.light_grip": "Легкая рукоять",
-  "item.nukacraft.specialised_grip": "Спец. рукоять",
-  "item.minecraft.potion.effect.blinding": "Зелье ослепления",
-  "item.minecraft.potion.effect.deafening": "Зелье оглушения",
-  "item.minecraft.lingering_potion.effect.blinding": "Туманное зелье ослепления",
-  "item.minecraft.lingering_potion.effect.deafening": "Туманное зелье оглушения",
-  "itemGroup.nukacraft": "MrCrayfish's Gun Mod",
-  "death.attack.nukacraft.bullet.killed": "%1$s был(а) убит(а) %2$s",
-  "death.attack.nukacraft.bullet.eliminated": "%1$s был(а) устранен(а) %2$s",
-  "death.attack.nukacraft.bullet.executed": "%1$s был(а) казнен(а) %2$s",
-  "death.attack.nukacraft.bullet.annihilated": "%1$s был(а) аннигилирован(а) %2$s",
-  "death.attack.nukacraft.bullet.decimated": "%1$s был(а) уничтожен(а) %2$s",
-  "info.nukacraft.damage": "Урон: %s",
-  "info.nukacraft.ignore_ammo": "Бесконечные боеприпасы",
-  "info.nukacraft.ammo": "Боеприпасов: %s/%s",
-  "info.nukacraft.ammo_type": "Тип боеприпасов: %s",
-  "info.nukacraft.attachment_help": "Нажмите %s в игре для изменения обвесов",
-  "key.categories.nukacraft": "Nuka Craft Weapons",
-  "key.nukacraft.reload": "Перезарядить",
-  "key.nukacraft.unload": "Разрядить",
-  "key.nukacraft.attachments": "Изменить обвесы",
+  "item.nukacraft.fuel": "Топливо",
+  "item.nukacraft.fusion_cell": "Ядерная батарея",
+
+  "item.nukacraft.dirty_water_bucket": "Ведро грязной воды",
+  "item.nukacraft.poisonous_water_bucket": "Poisonous Water Bucket",
+
+  "item.nukacraft.laser_rifle": "Лазерная винтовка",
+  "item.nukacraft.laser_pistol": "Лазерная пистолет",
+  "item.nukacraft.gatling_laser": "Гатлинг лазер",
+  "item.nukacraft.shotgun": "Дробовик",
+  "item.nukacraft.flamer": "Военный огнемёт",
+  "item.nukacraft.handmade_flamer": "Самодельный огнемёт",
+
   "effect.nukacraft.blinded": "Ослеплён",
   "effect.nukacraft.deafened": "Оглушён",
-  "subtitle.nukacraft.stun.explosion": "Взрыв оглушающей гранаты",
-  "subtitle.nukacraft.stun.ring": "Звон",
-  "subtitle.nukacraft.fire": "Стрельба",
-  "subtitle.nukacraft.fire.silenced": "Приглушенная стрельба",
-  "subtitle.nukacraft.fire.enchanted": "Зачарованная стрельба",
-  "subtitle.nukacraft.reload": "Перезарядка",
-  "subtitle.nukacraft.grenade.pin": "Чека гранаты",
-  "subtitle.nukacraft.attach": "Обвес прикреплён",
-  "subtitle.nukacraft.cock": "Взведение оружия",
-  "nukacraft.option_list.no_items": "Нет предметов",
-  "nukacraft.options.adsSensitivity": "Чувствительность ADS",
-  "nukacraft.options.adsSensitivity.format": "Чувствительность ADS: %s",
-  "nukacraft.options.crosshair": "Перекрестие",
-  "nukacraft.crosshair.arrow": "Стрелка",
-  "nukacraft.crosshair.better_default": "Улучшенный по умолчанию",
-  "nukacraft.crosshair.box": "Бокс",
-  "nukacraft.crosshair.circle": "Круг",
-  "minecraft.crosshair.default": "По умолчанию",
-  "nukacraft.crosshair.dot": "Точка",
-  "nukacraft.crosshair.filled_circle": "Заполненный круг",
-  "nukacraft.crosshair.hit_marker": "Маркер попадания",
-  "nukacraft.crosshair.line": "Линия",
-  "nukacraft.crosshair.round": "Круглый",
-  "nukacraft.crosshair.smiley": "Смайлик",
-  "nukacraft.crosshair.square": "Квадрат",
-  "nukacraft.crosshair.t": "T",
-  "nukacraft.crosshair.tech": "Tech",
-  "gui.nukacraft.workbench.assemble": "Сбор",
-  "gui.nukacraft.workbench.show_remaining": "Показать оставшееся",
+
   "gui.nukacraft.workbench.tab.weapons": "Оружие",
   "gui.nukacraft.workbench.tab.attachments": "Обвесы",
   "gui.nukacraft.workbench.tab.ammo": "Боеприпасы",
@@ -670,68 +606,6 @@
   "gui.nukacraft.workbench.tab.shotgun": "Дробовики",
   "gui.nukacraft.workbench.tab.rifle": "Винтовки",
   "gui.nukacraft.workbench.tab.melee": "Ближнее",
-  "container.nukacraft.workbench": "Сборочный Верстак",
-  "container.nukacraft.attachments": "Изменить обвесы",
-  "container.nukacraft.attachments.window_help": "Кликните, чтобы перемещать и вертеть",
-  "slot.nukacraft.attachment.not_applicable": "§cНе применимо",
-  "slot.nukacraft.attachment.scope": "Прицел",
-  "slot.nukacraft.attachment.barrel": "Ствол",
-  "slot.nukacraft.attachment.stock": "Ложа",
-  "slot.nukacraft.attachment.under_barrel": "Подствольник",
-  "enchantment.nukacraft.quick_hands": "Быстрые руки",
-  "enchantment.nukacraft.trigger_finger": "Указательный палец",
-  "enchantment.nukacraft.lightweight": "Облегчённый",
-  "enchantment.nukacraft.collateral": "Прострел",
-  "enchantment.nukacraft.over_capacity": "Сверх боезапас",
-  "enchantment.nukacraft.reclaimed": "Возвращённые",
-  "enchantment.nukacraft.accelerator": "Ускоритель",
-  "enchantment.nukacraft.puncturing": "Пробитие",
-  "enchantment.nukacraft.fire_starter": "Поджигатель",
-  "enchantment.nukacraft.quick_hands.desc": "Увеличивает скорость перезарядки оружия.",
-  "enchantment.nukacraft.trigger_finger.desc": "Увеличивает скорость стрельбы из оружия",
-  "enchantment.nukacraft.lightweight.desc": "Уменьшает вес оружия для увеличения скорости ADS",
-  "enchantment.nukacraft.collateral.desc": "Заставляет выпущенные пули проходить через несколько существ",
-  "enchantment.nukacraft.over_capacity.desc": "Увеличивает боезапас оружия",
-  "enchantment.nukacraft.reclaimed.desc": "Есть шанс, что пуля не израсходуется при стрельбе",
-  "enchantment.nukacraft.accelerator.desc": "Увеличивает скорость выпущенных снарядов, заставляя их наносить больше урона",
-  "enchantment.nukacraft.puncturing.desc": "Есть шанс, что пуля нанесет критический урон",
-  "enchantment.nukacraft.fire_starter.desc": "Пули поджигают блоки и объекты при попадании",
-  "perk.nukacraft.title": "Перки:",
-  "perk.nukacraft.entry.positive": "+ %s",
-  "perk.nukacraft.entry.negative": "- %s",
-  "perk.nukacraft.fire_volume.positive": "Более тихий звук огня",
-  "perk.nukacraft.fire_volume.negative": "Более громкий звук огня",
-  "perk.nukacraft.silenced.positive": "Заглушён",
-  "perk.nukacraft.sound_radius.positive": "Уменьшенный радиус звука огня",
-  "perk.nukacraft.sound_radius.negative": "Увеличенный радиус звука огня",
-  "perk.nukacraft.additional_damage.positive": "Дополнительный урон §r(§l+%s ♥§r)",
-  "perk.nukacraft.additional_damage.negative": "Отрицательный урон §r(§l-%s ♥§r)",
-  "perk.nukacraft.modified_damage.positive": "Увеличенный урон оружия",
-  "perk.nukacraft.modified_damage.negative": "Сниженный урон оружия",
-  "perk.nukacraft.projectile_speed.positive": "Повышенная скорость снаряда",
-  "perk.nukacraft.projectile_speed.negative": "Сниженная скорость снаряда",
-  "perk.nukacraft.projectile_spread.positive": "Уменьшенный разброс снарядов",
-  "perk.nukacraft.projectile_spread.negative": "Увеличенный разброс снарядов",
-  "perk.nukacraft.projectile_life.positive": "Увеличенный диапазон урона",
-  "perk.nukacraft.projectile_life.negative": "Уменьшенный диапазон урона",
-  "perk.nukacraft.recoil.positive": "Сниженная отдача",
-  "perk.nukacraft.recoil.negative": "Увеличенная отдача",
-  "perk.nukacraft.ads_speed.positive": "Повышенная скорость ADS",
-  "perk.nukacraft.ads_speed.negative": "Сниженная скорость ADS",
-  "perk.nukacraft.rate.positive": "Повышенная скорострельность",
-  "perk.nukacraft.rate.negative": "Пониженная скорострельность",
-  "gui.nukacraft.assemble": "Собрать",
-  "gui.nukacraft.show_remaining": "Показать оставшееся",
-  "nukacraft.button.shoot": "Стрельба из оружия",
-  "nukacraft.button.aim": "Aim Down Sight (ADS)",
-  "nukacraft.button.reload": "Перезарядить / Разрядить",
-  "nukacraft.button.attachments": "Изменить обвесы",
-  "nukacraft.button.steadyAim": "Твёрдая рука",
-  "nukacraft.category.workbench.title": "Сборка",
-  "nukacraft.category.workbench.materials": "Материалы",
-  "nukacraft.action.aim": "Прицел",
-  "nukacraft.action.shoot": "Выстрел",
-  "nukacraft.action.reload": "Перезарядка",
-  "nukacraft.action.steady_aim": "Твёрдая рука",
+
   "item.nukacraft.acid_bucket": "Ведро кислоты"
 }
