--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -364,6 +364,12 @@
   "block.nukacraft.whitebricks_stairs": "White Brick Stairs",
   "block.nukacraft.smooth_brick": "Smooth Bricks",
   "block.nukacraft.steel_bars": "Steel Bars",
+  "block.nukacraft.door_cage": "Cage Door",
+  "block.nukacraft.cryocapsule": "Cryocapsule",
+  "block.nukacraft.bog_pad": "Swamp Trash",
+  "block.nukacraft.techchair": "Engineer's Chair",
+  "block.nukacraft.toilet": "Toilet",
+  "block.nukacraft.goldtoilet": "§6Golden Toilet★★★",
   "block.nukacraft.vtarmor": "Vault-Tec Betonite",
   "block.nukacraft.shelter_lamp": "Vault-Tec Lamp",
   "block.nukacraft.vent_tube": "Vent Tube",
