--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -20,6 +20,12 @@
   "block.nukacraft.ultracite_tuff_ore": "Месторождение Ультрацита",
   "block.nukacraft.dinnerchair": "Обеденная Скамья",
   "block.nukacraft.rusty_bush": "Ржавый Куст",
+  "block.nukacraft.door_cage": "Дверь Клетки",
+  "block.nukacraft.cryocapsule": "Криокапсула",
+  "block.nukacraft.bog_pad": "Болотный Мусор",
+  "block.nukacraft.techchair": "Стул Инженера",
+  "block.nukacraft.toilet": "Унитаз",
+  "block.nukacraft.goldtoilet": "§6Золотой Унитаз★★★",
   "block.nukacraft.heap_grass": "Шлаковая Трава",
   "block.nukacraft.ash_smoker": "Пепельный Гейзер",
   "block.nukacraft.scorched_earth": "Горелая Земля",
