--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -256,7 +256,7 @@
   "item.nukacraft.pmt1": "Viscous Mass",
   "item.nukacraft.prewarmoney": "Pre-War Money",
   "item.nukacraft.raw_steel": "Raw Steel",
-  "item.nukacraft.rawuran": "Raw Uranium",
+  "item.nukacraft.rawuran": "Uranium Piece",
   "item.nukacraft.reducts": "Reducer",
   "item.nukacraft.rubber": "Rubber",
   "item.nukacraft.screws": "Screws",
