--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -288,7 +288,7 @@
   "item.nukacraft.pmt1": "Вязкая Жижа",
   "item.nukacraft.prewarmoney": "Довоенные Деньги",
   "item.nukacraft.raw_steel": "Рудная Сталь",
-  "item.nukacraft.rawuran": "Рудный Уран",
+  "item.nukacraft.rawuran": "Кусочек Урана",
   "item.nukacraft.reducts": "Редуктор",
   "item.nukacraft.rubber": "Резина",
   "item.nukacraft.screws": "Болты",
