--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -630,5 +630,6 @@
 
 
   "skin.default" : "§7§oDefault",
-  "skin.rust" : "§7§oRusty"
+  "skin.rust" : "§7§oRusty",
+  "itemGroup.power_armor": "NukaCraft: Power Armor"
 }
