--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -45,10 +45,10 @@
   "item.nukacraft.quartz_piece": "Quartz Piece",
   "item.nukacraft.quartz_plate": "Quartz Plate",
   "item.nukacraft.silicate": "Silicate Powder",
-  "item.nukacraft.lether_helmet": "Lether Cap",
-  "item.nukacraft.lether_body": "Lether Chest",
-  "item.nukacraft.lether_leggins": "Lether Leggins",
-  "item.nukacraft.lether_boots": "Lether Boots",
+  "item.nukacraft.leather_helmet": "Lether Cap",
+  "item.nukacraft.leather_body": "Lether Chest",
+  "item.nukacraft.leather_leggins": "Lether Leggins",
+  "item.nukacraft.leather_boots": "Lether Boots",
   "item.nukacraft.traphelmet": "Trapper Helmet",
   "item.nukacraft.trapchest": "Trapper Chest",
   "item.nukacraft.trapleggins": "Trapper Leggins",
