--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -451,10 +451,10 @@
   "block.nukacraft.storage1": "Картотека",
   "block.nukacraft.vtcrate1": "Ящик Волт-Тек",
   "block.nukacraft.vtcrate2": "Ящик Смотрителя",
-  "item.nukacraft.lether_helmet": "Кожанная Фуражка",
-  "item.nukacraft.lether_body": "Кожанная Куртка",
-  "item.nukacraft.lether_leggins": "Кожаные Штаны",
-  "item.nukacraft.lether_boots": "Кожанные Ботинки",
+  "item.nukacraft.leather_helmet": "Кожанная Фуражка",
+  "item.nukacraft.leather_body": "Кожанная Куртка",
+  "item.nukacraft.leather_leggins": "Кожаные Штаны",
+  "item.nukacraft.leather_boots": "Кожанные Ботинки",
   "block.nukacraft.radioterminal": "Терминал Связи",
   "block.nukacraft.shelter_bars": "Решётка Волт-Тек",
   "item.nukacraft.fusionfruit": "Расплавленный Фрукт",
