--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -33,42 +33,50 @@
   "item.nukacraft.raw_brahminmeat": "Raw Brahmin Meat",
   "item.nukacraft.deathclaw": "Deathclaw Hand",
   "item.nukacraft.c_brahminmeat": "Cooked Brahmin Meat",
-  "item.nukacraft.wood_helmet": "Wooden Helmet",
-  "item.nukacraft.wood_body": "Wooden Chest",
-  "item.nukacraft.wood_leggins": "Wooden Leggins",
-  "item.nukacraft.wood_boots": "Wooden Boots",
+
   "item.nukacraft.abraxo_cleaner": "Abraxo Cleaner",
   "item.nukacraft.army_circuit": "Military-grade Circuit",
   "item.nukacraft.electrite_divider": "Electrite Divider",
-  "item.nukacraft.electrite_sheat": "Electrite Sheat",
-  "item.nukacraft.quartz_sheat": "Quartz Shell",
+  "item.nukacraft.electrite_shell": "Electrite Shell",
+  "item.nukacraft.quartz_shell": "Quartz Shell",
   "item.nukacraft.quartz_piece": "Quartz Piece",
   "item.nukacraft.quartz_plate": "Quartz Plate",
   "item.nukacraft.silicate": "Silicate Powder",
-  "item.nukacraft.leather_helmet": "Lether Cap",
-  "item.nukacraft.leather_body": "Lether Chest",
-  "item.nukacraft.leather_leggins": "Lether Leggins",
-  "item.nukacraft.leather_boots": "Lether Boots",
-  "item.nukacraft.traphelmet": "Trapper Helmet",
-  "item.nukacraft.trapchest": "Trapper Chest",
-  "item.nukacraft.trapleggins": "Trapper Leggins",
-  "item.nukacraft.trapboots": "Trapper Boots",
+
+  "item.nukacraft.wooden_helmet": "Wooden Helmet",
+  "item.nukacraft.wooden_chest": "Wooden Chest",
+  "item.nukacraft.wooden_leggins": "Wooden Leggins",
+  "item.nukacraft.wooden_boots": "Wooden Boots",
+
+  "item.nukacraft.leather_helmet": "Leather Cap",
+  "item.nukacraft.leather_chest": "Leather Chest",
+  "item.nukacraft.leather_leggins": "Leather Leggins",
+  "item.nukacraft.leather_boots": "Leather Boots",
+
+  "item.nukacraft.trapper_helmet": "Trapper Helmet",
+  "item.nukacraft.trapper_chest": "Trapper Chest",
+  "item.nukacraft.trapper_leggins": "Trapper Leggins",
+  "item.nukacraft.trapper_boots": "Trapper Boots",
+
   "item.nukacraft.raiders_helmet": "Raider Hood",
-  "item.nukacraft.raiders_body": "Raider Chest",
+  "item.nukacraft.raiders_chest": "Raider Chest",
   "item.nukacraft.raiders_leggins": "Raider Leggins",
   "item.nukacraft.raiders_boots": "Raider Boots",
+
+  "item.nukacraft.metal_helmet": "Metal Helmet",
+  "item.nukacraft.metal_chest": "Metal Chest",
+  "item.nukacraft.metal_leggins": "Metal Leggins",
+  "item.nukacraft.metal_boots": "Metal Boots",
+
   "item.nukacraft.ultracite_divider": "§cUltracite Divider★★",
-  "item.nukacraft.ultracite_sheat": "§aUltracite Sheat★",
+  "item.nukacraft.ultracite_shell": "§aUltracite Shell★",
   "item.nukacraft.whitebrick": "White Brick",
   "item.nukacraft.steelbowl": "Steel Bowl",
   "item.nukacraft.gilded_lead": "Gilded Lead Plate",
   "item.nukacraft.scrap": "Scrap Metal",
   "item.nukacraft.combatpipe": "Lead Pipe",
   "item.nukacraft.fusion_core": "Fusion Core",
-  "item.nukacraft.metalhelmet": "Metal Helmet",
-  "item.nukacraft.metalchest": "Metal Chest",
-  "item.nukacraft.metalleggins": "Metal Leggins",
-  "item.nukacraft.metalboots": "Metal Boots",
+
   "item.nukacraft.frame_item": "§3Power Armor Frame",
   "item.nukacraft.jetpack": "Jetpack",
   "item.nukacraft.t45_helmet": "T-45 Helmet",
@@ -256,7 +264,7 @@
   "item.nukacraft.pmt1": "Viscous Mass",
   "item.nukacraft.prewarmoney": "Pre-War Money",
   "item.nukacraft.raw_steel": "Raw Steel",
-  "item.nukacraft.rawuran": "Uranium Piece",
+  "item.nukacraft.rawuran": "Raw Uranium",
   "item.nukacraft.reducts": "Reducer",
   "item.nukacraft.rubber": "Rubber",
   "item.nukacraft.screws": "Screws",
