--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -77,17 +77,30 @@
   "item.nukacraft.c_dcmeat": "Стейк из Когтя Смерти",
   "item.nukacraft.raw_radroachmeat": "Сырое Мясо Радтаракана",
   "item.nukacraft.c_radroachmeat": "Стейк из Радтаракана",
-  "item.nukacraft.traphelmet": "Шлем Траппера",
-  "item.nukacraft.trapchest": "Нагрудник Траппера",
   "item.nukacraft.raw_brahminmeat": "Сырое Мясо Брамина",
   "item.nukacraft.c_brahminmeat": "Стейк из Брамина",
   "item.nukacraft.deathclaw": "Лапа Когтя Смерти",
-  "item.nukacraft.trapleggins": "Поножи Траппера",
-  "item.nukacraft.trapboots": "Ботинки Траппера",
-  "item.nukacraft.metalhelmet": "Металлический Шлем",
-  "item.nukacraft.metalchest": "Металлический Нагрудник",
-  "item.nukacraft.metalleggins": "Металлические Поножи",
-  "item.nukacraft.metalboots": "Металлические Ботинки",
+
+  "item.nukacraft.trapper_helmet": "Шлем Траппера",
+  "item.nukacraft.trapper_chest": "Нагрудник Траппера",
+  "item.nukacraft.trapper_leggins": "Поножи Траппера",
+  "item.nukacraft.trapper_boots": "Ботинки Траппера",
+
+  "item.nukacraft.metal_helmet": "Металлический Шлем",
+  "item.nukacraft.metal_chest": "Металлический Нагрудник",
+  "item.nukacraft.metal_leggins": "Металлические Поножи",
+  "item.nukacraft.metal_boots": "Металлические Ботинки",
+
+  "item.nukacraft.wooden_helmet": "Деревянный Шлем",
+  "item.nukacraft.wooden_body": "Деревянный Нагрудник",
+  "item.nukacraft.wooden_leggins": "Деревянные Поножи",
+  "item.nukacraft.wooden_boots": "Деревянная Обувь",
+
+  "item.nukacraft.leather_helmet": "Кожанная Фуражка",
+  "item.nukacraft.leather_body": "Кожанная Куртка",
+  "item.nukacraft.leather_leggins": "Кожаные Штаны",
+  "item.nukacraft.leather_boots": "Кожанные Ботинки",
+
   "item.nukacraft.fusion_core": "Ядерный Блок",
   "item.nukacraft.combatpipe": "Свинцовый Стояк",
   "item.nukacraft.frame_item": "§3Каркас Силовой Брони",
@@ -153,8 +166,8 @@
   "item.nukacraft.army_circuit": "Военная Электросхема",
   "block.nukacraft.steel_bars": "Стальная Решётка",
   "item.nukacraft.electrite_divider": "Электритовый Делитель",
-  "item.nukacraft.electrite_sheat": "Электритовая Оболочка",
-  "item.nukacraft.quartz_sheat": "Кварцевая Оболочка",
+  "item.nukacraft.electrite_shell": "Электритовая Оболочка",
+  "item.nukacraft.quartz_shell": "Кварцевая Оболочка",
   "item.nukacraft.quartz_piece": "Кварцевый Обломок",
   "item.nukacraft.quartz_plate": "Кварцевая Пластина",
   "item.nukacraft.silicate": "Силикатный Порошок",
@@ -163,7 +176,7 @@
   "item.nukacraft.megasloth": "Гриб Cверхленивца",
   "item.nukacraft.bblight": "Яркая Чума",
   "block.nukacraft.poison_grass": "Ядовитая Трава",
-  "item.nukacraft.ultracite_sheat": "§cУльтрацитовая Оболочка★",
+  "item.nukacraft.ultracite_shell": "§cУльтрацитовая Оболочка★",
   "item.nukacraft.ultracite_divider": "§cУльтрацитовый Делитель★★",
   "item.nukacraft.gilded_lead": "Позолоченная Свинцовая Пластина",
   "item.nukacraft.inda_abraxo_cleaner": "Пром. Чистящее Средство «Абраксо»",
@@ -200,10 +213,7 @@
   "item.nukacraft.shotshell": "Патрон Дробовика",
   "item.nukacraft.fatman": "§cТолстяк★★",
   "item.nukacraft.mini_nuke": "§cЯдерный Минизаряд★★",
-  "item.nukacraft.wood_helmet": "Деревянный Шлем",
-  "item.nukacraft.wood_body": "Деревянный Нагрудник",
-  "item.nukacraft.wood_leggins": "Деревянные Поножи",
-  "item.nukacraft.wood_boots": "Деревянная Обувь",
+
   "item.nukacraft.army_silencer": "Армейский Глушитель",
   "item.nukacraft.pistol10mm": "10мм Пистолет",
   "item.nukacraft.scout10mm": "10мм Пистолет Разведчика",
@@ -288,7 +298,7 @@
   "item.nukacraft.pmt1": "Вязкая Жижа",
   "item.nukacraft.prewarmoney": "Довоенные Деньги",
   "item.nukacraft.raw_steel": "Рудная Сталь",
-  "item.nukacraft.rawuran": "Кусочек Урана",
+  "item.nukacraft.rawuran": "Рудный Уран",
   "item.nukacraft.reducts": "Редуктор",
   "item.nukacraft.rubber": "Резина",
   "item.nukacraft.screws": "Болты",
@@ -451,10 +461,6 @@
   "block.nukacraft.storage1": "Картотека",
   "block.nukacraft.vtcrate1": "Ящик Волт-Тек",
   "block.nukacraft.vtcrate2": "Ящик Смотрителя",
-  "item.nukacraft.leather_helmet": "Кожанная Фуражка",
-  "item.nukacraft.leather_body": "Кожанная Куртка",
-  "item.nukacraft.leather_leggins": "Кожаные Штаны",
-  "item.nukacraft.leather_boots": "Кожанные Ботинки",
   "block.nukacraft.radioterminal": "Терминал Связи",
   "block.nukacraft.shelter_bars": "Решётка Волт-Тек",
   "item.nukacraft.fusionfruit": "Расплавленный Фрукт",
